--- a/HackwichFive/Base.lproj/Main.storyboard
+++ b/HackwichFive/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VRP-W6-t3l"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -42,6 +45,7 @@
                     </view>
                     <connections>
                         <outlet property="bottomLabel" destination="fnQ-J0-0OB" id="Dyu-E0-VtD"/>
+                        <outlet property="buttonLabel" destination="hOc-X2-hxd" id="SKr-EG-Sse"/>
                         <outlet property="topLabel" destination="TL4-Bt-tux" id="FNs-NB-VWc"/>
                     </connections>
                 </viewController>
